@@ -1,0 +1,7 @@
+@PART[smallClaw|GrapplingDevice]
+{        
+  MODULE
+  {
+    name = ClawExtension
+  }
+}
